--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "devDependencies": {
     "cannon-es": "^0.19.0",
     "cannon-es-debugger": "^1.0.0",
+    "css-loader": "^6.7.1",
     "stats.js": "^0.17.0",
+    "style-loader": "^3.3.1",
     "three": "^0.137.5",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
